CKS-Walk-Thru-003/mock-tasks/task-03-networkpolicy/02-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: access-allowed
  labels:
    access: granted
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
