CKS-Walk-Thru-003/mock-tasks/task-03-networkpolicy/03-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-client
  namespace: netpol-task
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: access-allowed
      podSelector:
        matchLabels:
          access: granted
